--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shop">
-        <activity android:name=".presentation.UserActivity"
+        <activity android:name=".presentation.ShopItemActivity"
             android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".presentation.MainActivity"
